<resources>
	<string name="app_name">포토 메모장</string>

	<string name="text_save">저장</string>
	<string name="text_adjust">적용</string>
	<string name="text_hide">숨기기</string>
	<string name="text_memo_title">제목</string>
	<string name="text_memo_content">메모</string>
	<string name="text_add_image">이미지 첨부</string>
	<string name="text_image_preview">이미지 미리보기</string>
	<string name="text_image_url">이미지 url 입력</string>

	<string name="text_image_description">썸네일 이미지</string>
	<string name="text_memo_notice">메모를 추가 해 보세요.</string>

	<string name="msg_save">저장되었습니다.</string>
	<string name="msg_delete">삭제되었습니다.</string>
	<string name="msg_permission_granted">권한 승인됨</string>
	<string name="msg_permission_denied">권한 거부됨</string>

	<string name="msg_vacant_url">Url 주소를 입력해 주세요.</string>
	<string name="msg_vacant_content">입력한 내용이 없어 메모를 저장하지 않았어요.</string>

	<string name="err_permission_denied">권한을 승인해야 이미지 첨부가 가능합니다.</string>
	<string name="err_url_import">이미지를 가져오는데 실패했습니다.</string>
	<string name="err_network_disconnect">네트워크 연결 상태를 확인 해 주세요.</string>

	<string name="btn_add_image">+ 추가</string>

	<string-array name="option_add_image">
		<item>갤러리에서 가져오기</item>
		<item>카메라로 촬영하기</item>
		<item>외부 이미지 주소로 가져오기</item>
	</string-array>
	<string name="delete_message">메모를 삭제하시겠습니까?</string>
	<string name="btn_ok_text">삭제</string>
	<string name="btn_cancel_text">취소</string>
    <string name="download_success">저장되었습니다.</string>
</resources>
