<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.foreknowledge.photomemo2.viewmodel.MemoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="7dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:background="@drawable/dr_search_rounded"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_url"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/text_image_url"
                android:imeOptions="actionSearch"
                android:inputType="textUri"
                android:text="@{viewModel.urlPath}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_weight="0"
                android:onClick="@{() -> viewModel.clearPath()}"
                android:background="@drawable/dr_clear_icon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/text_hide"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:onClick="hideBox"
                style="?attr/buttonBarStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/text_adjust"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:onClick="getUrlImage"
                style="?attr/buttonBarStyle" />

        </LinearLayout>

    </LinearLayout>
</layout>